--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -18,7 +18,7 @@ a:hover,
 a:focus,
 a:active,
 a.active {
-  color: #18BC9C;
+  color: #0b362c;
   outline: none;
 }
 h1,
@@ -42,7 +42,8 @@ hr.star-primary {
 }
 hr.star-light:after,
 hr.star-primary:after {
-  content: "\f005";
+  /*JET: content: "\f0fb";*/
+  content: "\f013";
   font-family: FontAwesome;
   display: inline-block;
   position: relative;
@@ -54,7 +55,7 @@ hr.star-light {
   border-color: white;
 }
 hr.star-light:after {
-  background-color: #18BC9C;
+  background-color: #0b362c;
   color: white;
 }
 hr.star-primary {
@@ -69,7 +70,7 @@ hr.star-primary:after {
 }
 header {
   text-align: center;
-  background: #18BC9C;
+  background: #0b362c;
   color: white;
 }
 header .container {
@@ -129,7 +130,7 @@ header .intro-text .skills {
   color: white;
 }
 .navbar-custom .navbar-nav li a:hover {
-  color: #18BC9C;
+  color: #0b362c;
   outline: none;
 }
 .navbar-custom .navbar-nav li a:focus,
@@ -138,13 +139,13 @@ header .intro-text .skills {
 }
 .navbar-custom .navbar-nav li.active a {
   color: white;
-  background: #18BC9C;
+  background: #0b362c;
 }
 .navbar-custom .navbar-nav li.active a:hover,
 .navbar-custom .navbar-nav li.active a:focus,
 .navbar-custom .navbar-nav li.active a:active {
   color: white;
-  background: #18BC9C;
+  background: #0b362c;
 }
 .navbar-custom .navbar-toggle {
   color: white;
@@ -154,9 +155,9 @@ header .intro-text .skills {
 }
 .navbar-custom .navbar-toggle:hover,
 .navbar-custom .navbar-toggle:focus {
-  background-color: #18BC9C;
+  background-color: #0b362c;
   color: white;
-  border-color: #18BC9C;
+  border-color: #0b362c;
 }
 @media (min-width: 768px) {
   .navbar-custom {
@@ -186,7 +187,7 @@ section h2 {
   font-size: 3em;
 }
 section.success {
-  background: #18BC9C;
+  background: #0b362c;
   color: white;
 }
 @media (max-width: 767px) {
@@ -289,7 +290,7 @@ section.success {
   opacity: 1;
 }
 .floating-label-form-group-with-focus label {
-  color: #18BC9C;
+  color: #0b362c;
 }
 form .row:first-child .floating-label-form-group {
   border-top: 1px solid #eeeeee;
@@ -323,7 +324,7 @@ footer .footer-below {
 .btn-outline:focus,
 .btn-outline:active,
 .btn-outline.active {
-  color: #18BC9C;
+  color: #0b362c;
   background: white;
   border: solid 2px white;
 }
@@ -371,8 +372,8 @@ fieldset[disabled] .btn-primary.active {
 }
 .btn-success {
   color: white;
-  background-color: #18BC9C;
-  border-color: #18BC9C;
+  background-color: #0b362c;
+  border-color: #0b362c;
   font-weight: 700;
 }
 .btn-success:hover,
@@ -404,11 +405,11 @@ fieldset[disabled] .btn-success:active,
 .btn-success.disabled.active,
 .btn-success[disabled].active,
 fieldset[disabled] .btn-success.active {
-  background-color: #18BC9C;
-  border-color: #18BC9C;
+  background-color: #0b362c;
+  border-color: #0b362c;
 }
 .btn-success .badge {
-  color: #18BC9C;
+  color: #0b362c;
   background-color: white;
 }
 .btn-social {
