--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -83,6 +83,14 @@ hr.star-primary:after {
 .img-centered {
   margin: 0 auto;
 }
+
+.parallax {
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 header {
   background: url('../img/header-background.jpg') center;
     -webkit-background-size: cover;
