--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -12,10 +12,11 @@
 	box-shadow: none;
   border-radius: 0px;
   border: 4px solid #0f2037;
+
 }
 
 .progress-bar {
-  background-color: #0f2037;
+  background-color: #1B826A;
 }
 
 body {
