--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -1,18 +1,60 @@
+
 /*!
  * Start Bootstrap - Freelancer v3.3.7+1 (http://startbootstrap.com/template-overviews/freelancer)
  * Copyright 2013-2016 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
 
+.slider {
+  width: 50%;
+  margin: 100px auto;
+}
+
+.slick-slide {
+  margin: 0px 20px;
+}
+
+.slick-slide img {
+  width: 100%;
+}
+
+.slick-prev:before,
+.slick-next:before {
+  color: black;
+}
+
+.slick-slide {
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+    opacity: .8;
+}
+
+.center img {
+    transition-property: all;
+    transition-duration: 300ms;
+    transition-timing-function: ease;
+    transition-delay: initial;
+}
+
+.slick-center {
+    transform: scale(1.08);
+    -webkit-filter: grayscale(0%);
+    filter: grayscale(0%);
+    opacity: 1;
+}
+
 .progress {
-	overflow: visible;
-	height: 25px;
-	margin-bottom: 20px;
-	-webkit-box-shadow: none;
-	box-shadow: none;
+  overflow: visible;
+  height: 25px;
+  margin-bottom: 20px;
+  -webkit-box-shadow: none;
+  box-shadow: none;
   border-radius: 0px;
   border: 4px solid #0f2037;
+}
 
+.progress-lable .fa {
+  font-size: 20px;
 }
 
 .progress-bar {
@@ -23,9 +65,11 @@ body {
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   overflow-x: hidden;
 }
+
 p {
   font-size: 20px;
 }
+
 p.small {
   font-size: 16px;
 }
@@ -38,6 +82,7 @@ a.active {
   color: #0b362c;
   outline: none;
 }
+
 h1,
 h2,
 h3,
@@ -48,6 +93,7 @@ h6 {
   text-transform: uppercase;
   font-weight: 700;
 }
+
 hr.star-light,
 hr.star-primary {
   padding: 0;
@@ -57,6 +103,7 @@ hr.star-primary {
   max-width: 250px;
   margin: 25px auto 30px;
 }
+
 hr.star-light:after,
 hr.star-primary:after {
   content: "\f013";
@@ -67,45 +114,50 @@ hr.star-primary:after {
   font-size: 2em;
   padding: 0 0.25em;
 }
+
 hr.star-light {
   border-color: white;
 }
+
 hr.star-light:after {
   background-color: #0b362c;
   color: white;
 }
+
 hr.star-primary {
   border-color: #0f2037;
 }
+
 hr.star-primary:after {
   background-color: white;
   color: #0f2037;
 }
+
 .img-centered {
   margin: 0 auto;
 }
 
 .parallax {
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 header {
   background: url('../img/header-background.jpg') center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;    
-    background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   background-size: cover;
   text-align: center;
   color: white;
-
   /* Add dark layer for readibility */
-  box-shadow: inset 0 0 0 1000px rgba(0,0,0,.3);
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, .3);
 }
-header small a{
+
+header small a {
   font-style: italic;
   text-align: right;
   padding: 1%;
@@ -117,10 +169,12 @@ header .container {
   padding-top: 100px;
   padding-bottom: 50px;
 }
+
 header img {
   display: block;
   margin: 0 auto 20px;
 }
+
 header .intro-text .name {
   display: block;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -128,10 +182,12 @@ header .intro-text .name {
   font-weight: 700;
   font-size: 2em;
 }
+
 header .intro-text .skills {
   font-size: 1.25em;
   font-weight: 300;
 }
+
 @media (min-width: 768px) {
   header .container {
     padding-top: 200px;
@@ -144,6 +200,7 @@ header .intro-text .skills {
     font-size: 1.75em;
   }
 }
+
 .navbar-custom {
   background: #0f2037;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -151,54 +208,66 @@ header .intro-text .skills {
   font-weight: 700;
   border: none;
 }
+
 .navbar-custom a:focus {
   outline: none;
 }
+
 .navbar-custom .navbar-brand {
   color: white;
 }
+
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus,
 .navbar-custom .navbar-brand:active,
 .navbar-custom .navbar-brand.active {
   color: white;
 }
+
 .navbar-custom .navbar-nav {
   letter-spacing: 1px;
 }
+
 .navbar-custom .navbar-nav li a {
   color: white;
 }
+
 .navbar-custom .navbar-nav li a:hover {
   color: #0b362c;
   outline: none;
 }
+
 .navbar-custom .navbar-nav li a:focus,
 .navbar-custom .navbar-nav li a:active {
   color: white;
 }
+
 .navbar-custom .navbar-nav li.active a {
   color: white;
   background: #0b362c;
 }
+
 .navbar-custom .navbar-nav li.active a:hover,
 .navbar-custom .navbar-nav li.active a:focus,
 .navbar-custom .navbar-nav li.active a:active {
   color: white;
   background: #0b362c;
 }
+
 .navbar-custom .navbar-toggle {
   color: white;
   text-transform: uppercase;
   font-size: 10px;
   border-color: white;
 }
+
 .navbar-custom .navbar-toggle:hover,
 .navbar-custom .navbar-toggle:focus {
   background-color: #0b362c;
   color: white;
   border-color: #0b362c;
 }
+
 @media (min-width: 768px) {
   .navbar-custom {
     padding: 25px 0;
@@ -219,17 +288,21 @@ header .intro-text .skills {
     font-size: 1.5em;
   }
 }
+
 section {
   padding: 100px 0;
 }
+
 section h2 {
   margin: 0;
   font-size: 3em;
 }
+
 section.success {
   background: #0b362c;
   color: white;
 }
+
 @media (max-width: 767px) {
   section {
     padding: 75px 0;
@@ -238,29 +311,41 @@ section.success {
     padding-top: 75px;
   }
 }
+
 #portfolio .portfolio-item {
   margin: 0 0 15px;
   right: 0;
 }
+
 #portfolio .portfolio-item .portfolio-link {
   display: block;
   position: relative;
-  max-width: 400px;
+  max-width: 250px;
+  border-radius: 50%;
+  border: 5px #0f2037 solid;
   margin: 0 auto;
 }
+
 #portfolio .portfolio-item .portfolio-link .caption {
-  background: rgba(24, 188, 156, 0.9);
+  background: rgba(12, 74, 77, 0.9);
   position: absolute;
   width: 100%;
   height: 100%;
   opacity: 0;
+  border-radius: 50%;
   transition: all ease 0.5s;
   -webkit-transition: all ease 0.5s;
   -moz-transition: all ease 0.5s;
 }
+
 #portfolio .portfolio-item .portfolio-link .caption:hover {
   opacity: 1;
 }
+
+#portfolio .portfolio-item .portfolio-link img {
+  border-radius: 50%;
+}
+
 #portfolio .portfolio-item .portfolio-link .caption .caption-content {
   position: absolute;
   width: 100%;
@@ -271,27 +356,33 @@ section.success {
   margin-top: -12px;
   color: white;
 }
+
 #portfolio .portfolio-item .portfolio-link .caption .caption-content i {
   margin-top: -12px;
 }
+
 #portfolio .portfolio-item .portfolio-link .caption .caption-content h3,
 #portfolio .portfolio-item .portfolio-link .caption .caption-content h4 {
   margin: 0;
 }
+
 #portfolio * {
   z-index: 2;
 }
+
 @media (min-width: 767px) {
   #portfolio .portfolio-item {
     margin: 0 0 30px;
   }
 }
+
 .floating-label-form-group {
   position: relative;
   margin-bottom: 0;
   padding-bottom: 0.5em;
   border-bottom: 1px solid #eeeeee;
 }
+
 .floating-label-form-group input,
 .floating-label-form-group textarea {
   z-index: 1;
@@ -305,6 +396,7 @@ section.success {
   box-shadow: none !important;
   resize: none;
 }
+
 .floating-label-form-group label {
   display: block;
   z-index: 0;
@@ -316,42 +408,52 @@ section.success {
   vertical-align: middle;
   vertical-align: baseline;
   opacity: 0;
-  -webkit-transition: top 0.3s ease,opacity 0.3s ease;
-  -moz-transition: top 0.3s ease,opacity 0.3s ease;
-  -ms-transition: top 0.3s ease,opacity 0.3s ease;
-  transition: top 0.3s ease,opacity 0.3s ease;
+  -webkit-transition: top 0.3s ease, opacity 0.3s ease;
+  -moz-transition: top 0.3s ease, opacity 0.3s ease;
+  -ms-transition: top 0.3s ease, opacity 0.3s ease;
+  transition: top 0.3s ease, opacity 0.3s ease;
 }
+
 .floating-label-form-group:not(:first-child) {
   padding-left: 14px;
   border-left: 1px solid #eeeeee;
 }
+
 .floating-label-form-group-with-value label {
   top: 0;
   opacity: 1;
 }
+
 .floating-label-form-group-with-focus label {
   color: #0b362c;
 }
+
 form .row:first-child .floating-label-form-group {
   border-top: 1px solid #eeeeee;
 }
+
 footer {
   color: white;
 }
+
 footer h3 {
   margin-bottom: 30px;
 }
+
 footer .footer-above {
   padding-top: 50px;
   background-color: #0f2037;
 }
+
 footer .footer-col {
   margin-bottom: 50px;
 }
+
 footer .footer-below {
   padding: 25px 0;
   background-color: #233140;
 }
+
 .btn-outline {
   color: white;
   font-size: 20px;
@@ -360,6 +462,7 @@ footer .footer-below {
   transition: all 0.3s ease-in-out;
   margin-top: 15px;
 }
+
 .btn-outline:hover,
 .btn-outline:focus,
 .btn-outline:active,
@@ -368,12 +471,14 @@ footer .footer-below {
   background: white;
   border: solid 2px white;
 }
+
 .btn-primary {
   color: white;
   background-color: #0f2037;
   border-color: #0f2037;
   font-weight: 700;
 }
+
 .btn-primary:hover,
 .btn-primary:focus,
 .btn-primary:active,
@@ -383,11 +488,13 @@ footer .footer-below {
   background-color: #1a242f;
   border-color: #161f29;
 }
+
 .btn-primary:active,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
   background-image: none;
 }
+
 .btn-primary.disabled,
 .btn-primary[disabled],
 fieldset[disabled] .btn-primary,
@@ -406,16 +513,19 @@ fieldset[disabled] .btn-primary.active {
   background-color: #0f2037;
   border-color: #0f2037;
 }
+
 .btn-primary .badge {
   color: #0f2037;
   background-color: white;
 }
+
 .btn-success {
   color: white;
   background-color: #0b362c;
   border-color: #0b362c;
   font-weight: 700;
 }
+
 .btn-success:hover,
 .btn-success:focus,
 .btn-success:active,
@@ -425,11 +535,13 @@ fieldset[disabled] .btn-primary.active {
   background-color: #128f76;
   border-color: #11866f;
 }
+
 .btn-success:active,
 .btn-success.active,
 .open .dropdown-toggle.btn-success {
   background-image: none;
 }
+
 .btn-success.disabled,
 .btn-success[disabled],
 fieldset[disabled] .btn-success,
@@ -448,10 +560,12 @@ fieldset[disabled] .btn-success.active {
   background-color: #0b362c;
   border-color: #0b362c;
 }
+
 .btn-success .badge {
   color: #0b362c;
   background-color: white;
 }
+
 .btn-social {
   display: inline-block;
   height: 50px;
@@ -462,11 +576,13 @@ fieldset[disabled] .btn-success.active {
   font-size: 20px;
   line-height: 45px;
 }
+
 .btn:focus,
 .btn:active,
 .btn.active {
   outline: none;
 }
+
 .scroll-top {
   position: fixed;
   right: 2%;
@@ -475,6 +591,7 @@ fieldset[disabled] .btn-success.active {
   height: 50px;
   z-index: 1049;
 }
+
 .scroll-top .btn {
   font-size: 20px;
   width: 50px;
@@ -482,9 +599,11 @@ fieldset[disabled] .btn-success.active {
   border-radius: 100%;
   line-height: 28px;
 }
+
 .scroll-top .btn:focus {
   outline: none;
 }
+
 .portfolio-modal .modal-content {
   border-radius: 0;
   background-clip: border-box;
@@ -495,16 +614,22 @@ fieldset[disabled] .btn-success.active {
   padding: 100px 0;
   text-align: center;
 }
+
 .portfolio-modal .modal-content h2 {
   margin: 0;
   font-size: 3em;
 }
+
 .portfolio-modal .modal-content img {
   margin-bottom: 30px;
+  border-radius: 50%;
+  border: 5px #0f2037 solid;
 }
+
 .portfolio-modal .modal-content .item-details {
   margin: 30px 0;
 }
+
 .portfolio-modal .close-modal {
   position: absolute;
   width: 75px;
@@ -514,9 +639,11 @@ fieldset[disabled] .btn-success.active {
   right: 25px;
   cursor: pointer;
 }
+
 .portfolio-modal .close-modal:hover {
   opacity: 0.3;
 }
+
 .portfolio-modal .close-modal .lr {
   height: 75px;
   width: 1px;
@@ -529,6 +656,7 @@ fieldset[disabled] .btn-success.active {
   /* Safari and Chrome */
   z-index: 1051;
 }
+
 .portfolio-modal .close-modal .lr .rl {
   height: 75px;
   width: 1px;
@@ -540,14 +668,17 @@ fieldset[disabled] .btn-success.active {
   /* Safari and Chrome */
   z-index: 1052;
 }
+
 .portfolio-modal .modal-backdrop {
   opacity: 0;
   display: none;
 }
-div.modal-body ul.content li{
+
+div.modal-body ul.content li {
   font-size: 20px;
   text-align: left;
 }
+
 div.modal-body a.btn-social {
   font-size: 20px;
   color: black;
